--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chokidar": "^3.5.1",
     "downloadjs": "^1.4.7",
     "emailjs-com": "^2.6.4",
-    "node": "^17.0.1",
+    "node":"17.0.1",
     "node-forge": "^0.10.0",
     "node-signpdf": "^1.3.3",
     "particles-bg": "^2.5.5",
@@ -36,8 +36,8 @@
     "toastify": "^2.0.1"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js", 
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
