--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.1.1",
     "@pdf-lib/fontkit": "^1.1.1",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.22.0",
     "chokidar": "^3.5.1",
     "downloadjs": "^1.4.7",
     "emailjs-com": "^2.6.4",
-    "node":"17.0.1",
-    "node-forge": "^0.10.0",
+    "node": "17.0.1",
+    "node-forge": "5.0.0",
     "node-signpdf": "^1.3.3",
     "particles-bg": "^2.5.5",
     "pdf-lib": "^1.17.1",
@@ -28,7 +28,7 @@
     "react-drag-and-drop": "^3.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^5.0.0",
     "react-signature-canvas": "^1.0.3",
     "react-simple-image-viewer": "^0.0.8",
     "react-toastify": "^8.0.3",
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js", 
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,6 +57,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0"
+    "@testing-library/react": "^12.1.4"
   }
 }
