--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "downloadjs": "^1.4.7",
     "emailjs-com": "^2.6.4",
     "node": "17.0.1",
-    "node-forge": "5.0.0",
-    "node-signpdf": "^1.3.3",
     "particles-bg": "^2.5.5",
     "pdf-lib": "^1.17.1",
     "react": "^17.0.1",
@@ -36,8 +34,8 @@
     "toastify": "^2.0.1"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build && node script.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
