--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/icons-material": "^5.0.3",
-    "@mui/material": "^5.0.3",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
     "@mui/styles": "^5.1.1",
     "@pdf-lib/fontkit": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^7.1.2",
+    "add": "^2.0.6",
     "axios": "^0.22.0",
     "chokidar": "^3.5.1",
     "downloadjs": "^1.4.7",
@@ -30,6 +31,7 @@
     "react-signature-canvas": "^1.0.3",
     "react-simple-image-viewer": "^0.0.8",
     "react-toastify": "^8.0.3",
+    "sass": "^1.49.9",
     "smooth-scroll": "^16.1.3",
     "toastify": "^2.0.1"
   },
