--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.1.1",
+    "@mui/x-data-grid": "^5.7.0",
     "@pdf-lib/fontkit": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^7.1.2",
